--- a/DjangoGIF/apps/useraccounts/templates/useraccounts/view.html
+++ b/DjangoGIF/apps/useraccounts/templates/useraccounts/view.html
@@ -49,9 +49,10 @@
                         <img class="gif-grid-thumbnail animate" src="{{object.thumbnail.url}}">
 
                         <p class="gif-date">Added: {{ object.created }}</p>
-                        <p>{{ object.label }}</p>
+                        <p class="gif-label">{{ object.label }}</p>
 
                         {% if can_edit %}
+
                         <i class="fa fa-times delete-icon animate"></i>
 
                         <div class="gif-form delete-form hidden">
@@ -125,9 +126,8 @@
                 <div class="gif-grid-element animate">
                     <div class="gif-url hidden">{{ object.url }}</div>
                     <img class="gif-grid-thumbnail animate" src="{{object.thumbnail.url}}">
-
+                    <p class="gif-label">{{ object.label }}</p>
                     <p class="gif-date">Added: {{ object.created }}</p>
-                    <p>{{ object.label }}</p>
 
                     {% if can_edit %}
                     <i class="fa fa-times delete-icon animate"></i>
