--- a/DjangoGIF/apps/home/templates/home/signup.html
+++ b/DjangoGIF/apps/home/templates/home/signup.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 Sign up for an account!
-<form action="{% url 'useraccounts:create-account' %}" method="post">
+<form action="{% url 'create-account' %}" method="post">
     {% csrf_token %}
     {{ form }}
     <input type="submit" class="submit animate">
