--- a/DjangoGIF/static/css/main.css
+++ b/DjangoGIF/static/css/main.css
@@ -21,8 +21,20 @@ hr {
 	transition: all 0.2s ease-in-out;
 }
 
-.selected {	
-	border-bottom: .25em solid #498FBD !important;
+.button-selected {
+	top: 4px;
+	background-color: #498FBD !important;
+	-webkit-box-shadow: 0px 2px 0px #38749b !important;
+	-moz-box-shadow: 0px 2px 0px #38749b !important;
+	box-shadow: 0px 2px 0px #38749b !important;
+}
+
+.delete-selected {
+	top: 4px;
+	background-color: #ff4e4e !important;
+	-webkit-box-shadow: 0px 2px 0px #ff1b1b !important;
+	-moz-box-shadow: 0px 2px 0px #ff1b1b !important;
+	box-shadow: 0px 2px 0px #ff1b1b !important;
 }
 
 /* Home Page Styles *********************************************************/
@@ -69,7 +81,7 @@ input {
 	display: block;
 	margin: .5em 0;
 	padding: .25em;
-	border: .1em solid #70DAA7;
+	border: .1em solid #25B972;
 	font-family: 'Quicksand', sans-serif;
 	border-radius: .25em;
 }
@@ -123,7 +135,7 @@ label {
 }
 
 .submit:active {
-	top: 7px;
+	top: 4px;
 	-webkit-box-shadow: 0px 2px 0px #38749b;
 	-moz-box-shadow: 0px 2px 0px #38749b;
 	box-shadow: 0px 2px 0px #38749b;
@@ -141,13 +153,6 @@ label {
 .warning {
 	background-color: #ff6767 !important;
 	color: white;
-}
-
-.warning i {
-	color: #ff1b1b !important;
-}
-
-.warning {
 	-webkit-box-shadow: 0px 6px 0px #ff4e4e !important;
 	-moz-box-shadow: 0px 6px 0px #ff4e4e !important;
 	box-shadow: 0px 6px 0px #ff4e4e !important;
@@ -155,14 +160,19 @@ label {
 
 .warning:hover {
 	background-color: #ff3535 !important;
-	-moz-box-shadow: 0px 6px 0px #ff0202;
-	box-shadow: 0px 6px 0px #ff0202;
+	-webkit-box-shadow: 0px 6px 0px #ff0202 !important;
+	-moz-box-shadow: 0px 6px 0px #ff0202 !important;
+	box-shadow: 0px 6px 0px #ff0202 !important;
 }
 
 .warning:active {
 	-webkit-box-shadow: 0px 2px 0px #ff3535;
 	-moz-box-shadow: 0px 2px 0px #ff3535;
 	box-shadow: 0px 2px 0px #ff3535;
+}
+
+.warning i {
+	color: #ff1b1b !important;
 }
 
 .cancel {
@@ -183,7 +193,6 @@ label {
 	padding: .3em .75em;
 	width: 10em;
 	left: 1.5em;
-	top: -.75em;
 	text-align: center;
 	font-size: 1.2em;
 	line-height: 1.2em;
@@ -204,7 +213,7 @@ label {
 }
 
 .add-gif-form-button:active {
-	top: 7px;
+	top: 4px;
 	background-color: #498FBD;
 	-webkit-box-shadow: 0px 2px 0px #38749b;
 	-moz-box-shadow: 0px 2px 0px #38749b;
@@ -298,7 +307,7 @@ label {
 }
 
 .gif-grid-element:active {	
-	top: 7px;
+	top: 4px;
 }
 
 .focused {
@@ -428,7 +437,7 @@ label {
 }
 
 .add-tags-title:active, .add-tags-selected {
-	top: 7px;
+	top: 4px;
 	background-color: #498FBD;
 	-webkit-box-shadow: 0px 2px 0px #38749b;
 	-moz-box-shadow: 0px 2px 0px #38749b;
@@ -481,7 +490,7 @@ label {
 }
 
 .add-tag-submit:active {
-	top: 7px;
+	top: 4px;
 	-webkit-box-shadow: 0px 1px 0px #2a5876;
 	-moz-box-shadow: 0px 1px 0px #2a5876;
 	box-shadow: 0px 1px 0px #2a5876;
@@ -519,68 +528,96 @@ label {
 }
 
 /* Tag Manager *****************************************************************/
-#tag-manager {
-	margin: 0 auto;
-	width: 90%;
-}
-
-.tag-manager-tag {
+.tag-manager {
 	display: inline-block;
-	margin: 1em;
-	min-width: 1em;
-	border: .1em solid #25B972;
-	border-radius: .75em;
+	position: absolute;
+	top: .35em;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
 }
 
-.tag-manager-tag-title {
-	padding-left: .5em;
-	background-color: #25B972;
-	color: white;
-	border-radius: .6em .6em 0 0;
-}
-
-.tag-manager-tag-options {
+.tag-manager-options {
+	margin: 0 auto;
 	text-align: center;
 	padding: .5em;
 }
 
-.tag-manager-tag-options div {
+.tag-manager-options div {
 	display: inline-block;
 	margin: .1em;	
 	padding: .25em;
-	border-bottom: .25em solid #F2F2F2;
-}
-
-.tag-manager-tag-options div:hover {
-	cursor: pointer;
-	border-bottom: .25em solid #498FBD;
-}
-
-.tag-manager-tag-options .rename {
-
-}
-
-.tag-manager-tag-options .delete {
-
 }
 
 .tag-manager-form form {
+	position: relative;
 	margin: 1em auto;
+	padding: 1em;
+	z-index: 5;	
+	width: 75%;
+	background-color: #d9d9d9;
 	text-align: center;
+	box-shadow: 1px 5px 15px -5px #000;
+	border-radius: .2em;
+}
+
+.tag-manager-options-title {
+	font-size: 1.3em;
+	font-family: 'Open Sans';
+	color: #25B972;
+}
+
+.tag-manager-form form input {
+	width: 100%;
+	font-size: 1.25em;
 }
 
 .tag-manager-form .submit {
 	margin: .25em auto;
+	width: 60%;
 }
 
-.delete-tag-form div {
-	display: inline-block;
-	padding: .25em;
-	background-color: #99d0e0;
+.rename {
+	position: relative;
 	color: white;
+	background-color: #25B972;
+	-webkit-box-shadow: 0px 6px 0px #1d8f58;
+	-moz-box-shadow: 0px 6px 0px #1d8f58;
+	box-shadow: 0px 6px 0px #1d8f58;
+	border-radius: .25em;
 }
 
-.delete-tag-form div:hover {
+.rename:hover {
 	cursor: pointer;
-	background-color: #2b5d6b;
+	background-color: #1d8f58;
+	-webkit-box-shadow: 0px 6px 0px #14653e;
+	-moz-box-shadow: 0px 6px 0px #14653e;
+	box-shadow: 0px 6px 0px #14653e;
+}
+
+.rename:active {
+	top: 4px;
+	background-color: #498FBD;
+	-webkit-box-shadow: 0px 2px 0px #38749b;
+	-moz-box-shadow: 0px 2px 0px #38749b;
+	box-shadow: 0px 2px 0px #38749b;
+}
+
+.delete {
+	position: relative;
+	border-radius: .2em;
+	background-color: #ff6767;
+	border: none;
+	color: white;
+	-webkit-box-shadow: 0px 6px 0px #ff4e4e;
+	-moz-box-shadow: 0px 6px 0px #ff4e4e;
+	box-shadow: 0px 6px 0px #ff4e4e;
+}
+
+.delete:hover {
+	cursor: pointer;
+	background-color: #ff1b1b;
+	-webkit-box-shadow: 0px 6px 0px #e70000;
+	-moz-box-shadow: 0px 6px 0px #e70000;
+	box-shadow: 0px 6px 0px #e70000;
 }
