--- a/DjangoGIF/apps/home/templates/home/base.html
+++ b/DjangoGIF/apps/home/templates/home/base.html
@@ -26,6 +26,7 @@
 
     <!-- JavaScripts -->
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.js"></script>
     <script type="text/javascript" src="{% static '/static/js/main.js' %}"></script>
     </body>
 </html>
