--- a/DjangoGIF/apps/users/templates/users/view.html
+++ b/DjangoGIF/apps/users/templates/users/view.html
@@ -55,53 +55,126 @@
         </div>
         {% endif %}
 
-        <div id="tagged-gif-grid" class="gif-grid">
-            {% for entry in tagged_gifs %}
-            <div class="tag-group">
-                <div class="tag-title">{{ entry.0 }}</div>
+        <div id="gif-grids">
+            <div id="tagged-gif-grid" class="gif-grid">
+                {% for entry in tagged_gifs %}
+                <div class="tag-group">
+                    <div class="tag-title">{{ entry.0 }}</div>
 
-                {% if can_edit %}
-                <br>
-                <br>
+                    {% if can_edit %}
+                    <div class="tag-manager">
+                        <div class="tag-manager-options">
+                            <div class="rename">Rename</div>
+                            <div class="delete">Delete</div>
+                        </div>
 
-                <div class="tag-manager">
-                    <div class="tag-manager-options">
-                        <div class="rename">Rename</div>
-                        <div class="delete">Delete</div>
+                        <div class="tag-manager-form">
+                            <form class="rename-tag-form hidden" action="{% url 'users:rename-tag' %}" method="post">
+                                <div class="tag-manager-options-title">Rename Tag</div>
+
+                                {% csrf_token %}
+                                <input type="text" name="new_name" value="{{ entry.0 }}">
+                                <input type="text" name="current_name" value="{{ entry.0 }}" class="hidden">
+                                <input type="text" name="user_id" value="{{ user_id }}" class="hidden">
+                                <input type="submit" class="submit">
+                            </form>
+
+                            <form class="delete-tag-form hidden" action="{% url 'users:delete-tag' %}" method="post">
+                                <div class="tag-manager-options-title">Delete Tag</div>
+
+                                {% csrf_token %}
+                                <input type="text" name="current_name" value="{{ entry.0 }}" class="hidden">
+                                <input type="text" name="user_id" value="{{ user_id }}" class="hidden">
+                                <input type="submit" class="delete" value="Delete" style="display: inline-block;">
+                            </form>
+                        </div>
                     </div>
+                    {% endif %}
 
-                    <div class="tag-manager-form">
-                        <form class="rename-tag-form hidden" action="{% url 'users:rename-tag' %}" method="post">
-                            <div class="tag-manager-options-title">Rename Tag</div>
+                    {% for object in entry.1 %}
+                        <a name="{{ entry.0 }}"></a>
 
-                            {% csrf_token %}
-                            <input type="text" name="new_name" value="{{ entry.0 }}">
-                            <input type="text" name="current_name" value="{{ entry.0 }}" class="hidden">
-                            <input type="text" name="user_id" value="{{ user_id }}" class="hidden">
-                            <input type="submit" class="submit">
-                        </form>
+                        <div class="gif-grid-element animate">
+                            <div class="gif-url hidden">{{ object.url }}</div>
+                            <img class="gif-grid-thumbnail animate" src="{{ object.thumbnail.url }}">
 
-                        <form class="delete-tag-form hidden" action="{% url 'users:delete-tag' %}" method="post">
-                            <div class="tag-manager-options-title">Delete Tag</div>
+                            <p class="gif-date">Added: {{ object.created }}</p>
+                            <p class="gif-label">{{ object.label }}</p>
 
-                            {% csrf_token %}
-                            <input type="text" name="current_name" value="{{ entry.0 }}" class="hidden">
-                            <input type="text" name="user_id" value="{{ user_id }}" class="hidden">
-                            <input type="submit" class="delete" value="Delete" style="display: inline-block;">
-                        </form>
-                    </div>
+                            {% if can_edit %}
+                            <i class="fa fa-times delete-icon animate"></i>
+
+                            <div class="gif-form delete-form hidden">
+                                <form action="{% url 'users:delete-gif' %}" method="post" class="delete-form">
+                                    {% csrf_token %}
+                                    <div class="gif-form-title">
+                                        <div style="left: 1em;">delete GIF</div>
+                                    </div>
+
+                                    <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
+                                    <input type="submit" value="Delete GIF" class="submit warning">
+                                </form>
+                            </div>
+
+                            <div class="gif-form edit-form hidden">
+                                <form action="{% url 'users:edit-gif' %}" method="post" class="edit-form">
+                                    {% csrf_token %}
+                                    <div class="gif-form-title">
+                                        <div style="left: 1em;">label</div>
+                                    </div>
+
+                                    <input class="gif-label-field" type="text" name="label" value="{{ object.label }}" placeholder="Label">
+
+                                    <div class="tags">
+                                        <div class="gif-form-title">
+                                            <div style="right: 1em;">tags</div>
+                                        </div>
+
+                                        {% for tag in object.tags.all %}
+                                        <div class="tag">
+                                            <div class="tag-name">{{ tag.name }}</div>
+                                            <i class="fa fa-trash-o delete-tag"></i>
+                                            <input class="remove-tag-input hidden" type="text" value=" ">
+                                        </div>
+                                        {% endfor %}
+
+                                        <div class="add-tags">
+                                            <div class="tags-to-be-added hidden">
+                                                <div class="tags-to-be-added-title">Tags to be Added</div>
+                                            </div>
+
+                                            <div class="add-tags-title">
+                                                <i class="fa fa-tag"></i>
+                                                Add Tags
+                                                <input type="text" value="0" class="add-tags-input hidden">
+                                            </div>
+                                        </div>
+
+                                        <input class="add-tags-values hidden" type="text" name="tags_to_add" value="">
+                                        <input class="remove-tags-values hidden" type="text" name="tags_to_remove" value="">
+                                        <input class="gif-id-field hidden" type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
+                                    </div>
+
+                                    <input type="submit" value="Apply" class="edit-gif-submit submit">
+                                </form>
+                            </div>
+                            {% endif %}
+                        </div>
+                    {% endfor %}
                 </div>
-                {% endif %}
+                {% endfor %}
+            </div>
 
-                {% for object in entry.1 %}
-                    <a name="{{ entry.0 }}"></a>
+            <div id="all-gif-grid" class="gif-grid">
+                <div class="tag-group">
+                    <div class="tag-title">all GIFs</div>
 
+                    {% for object in gifs %}
                     <div class="gif-grid-element animate">
                         <div class="gif-url hidden">{{ object.url }}</div>
-                        <img class="gif-grid-thumbnail animate" src="{{ object.thumbnail.url }}">
-
-                        <p class="gif-date">Added: {{ object.created }}</p>
+                        <img class="gif-grid-thumbnail animate" src="{{object.thumbnail.url}}">
                         <p class="gif-label">{{ object.label }}</p>
+                        <p class="gif-date">Added: {{ object.created }}</p>
 
                         {% if can_edit %}
                         <i class="fa fa-times delete-icon animate"></i>
@@ -162,82 +235,8 @@
                         </div>
                         {% endif %}
                     </div>
-                {% endfor %}
-            </div>
-            {% endfor %}
-        </div>
-
-        <div id="all-gif-grid" class="gif-grid">
-            <div class="tag-group">
-                <div class="tag-title">all GIFs</div>
-
-                {% for object in gifs %}
-                <div class="gif-grid-element animate">
-                    <div class="gif-url hidden">{{ object.url }}</div>
-                    <img class="gif-grid-thumbnail animate" src="{{object.thumbnail.url}}">
-                    <p class="gif-label">{{ object.label }}</p>
-                    <p class="gif-date">Added: {{ object.created }}</p>
-
-                    {% if can_edit %}
-                    <i class="fa fa-times delete-icon animate"></i>
-
-                    <div class="gif-form delete-form hidden">
-                        <form action="{% url 'users:delete-gif' %}" method="post" class="delete-form">
-                            {% csrf_token %}
-                            <div class="gif-form-title">
-                                <div style="left: 1em;">delete GIF</div>
-                            </div>
-
-                            <input type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID" class="hidden">
-                            <input type="submit" value="Delete GIF" class="submit warning">
-                        </form>
-                    </div>
-
-                    <div class="gif-form edit-form hidden">
-                        <form action="{% url 'users:edit-gif' %}" method="post" class="edit-form">
-                            {% csrf_token %}
-                            <div class="gif-form-title">
-                                <div style="left: 1em;">label</div>
-                            </div>
-
-                            <input class="gif-label-field" type="text" name="label" value="{{ object.label }}" placeholder="Label">
-
-                            <div class="tags">
-                                <div class="gif-form-title">
-                                    <div style="right: 1em;">tags</div>
-                                </div>
-
-                                {% for tag in object.tags.all %}
-                                <div class="tag">
-                                    <div class="tag-name">{{ tag.name }}</div>
-                                    <i class="fa fa-trash-o delete-tag"></i>
-                                    <input class="remove-tag-input hidden" type="text" value=" ">
-                                </div>
-                                {% endfor %}
-
-                                <div class="add-tags">
-                                    <div class="tags-to-be-added hidden">
-                                        <div class="tags-to-be-added-title">Tags to be Added</div>
-                                    </div>
-
-                                    <div class="add-tags-title">
-                                        <i class="fa fa-tag"></i>
-                                        Add Tags
-                                        <input type="text" value="0" class="add-tags-input hidden">
-                                    </div>
-                                </div>
-
-                                <input class="add-tags-values hidden" type="text" name="tags_to_add" value="">
-                                <input class="remove-tags-values hidden" type="text" name="tags_to_remove" value="">
-                                <input class="gif-id-field hidden" type="text" name="gif_id" value="{{ object.id }}" placeholder="GIF ID">
-                            </div>
-
-                            <input type="submit" value="Apply" class="edit-gif-submit submit">
-                        </form>
-                    </div>
-                    {% endif %}
+                    {% endfor %}
                 </div>
-                {% endfor %}
             </div>
         </div>
     </div>
