CSS/JS refinements

--- a/DjangoGIF/apps/home/templates/home/home.html
+++ b/DjangoGIF/apps/home/templates/home/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-    <h1 id="logo">GifLocker</h1>
+    <h1 id="logo">GifCache</h1>
     {% if message %}
         <p class="message">{{ message }}</p>
     {% endif %}
