--- a/DjangoGIF/apps/home/templates/home/base.html
+++ b/DjangoGIF/apps/home/templates/home/base.html
@@ -15,7 +15,7 @@
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-        <title>GifLocker</title>
+        <title>GifCache</title>
     </head>
 
     <body>
